Subindo novas alterações de leitura de arquivo